# pytest-autofocus

./: .gitignore  AUTO_FOCUS_AS_STANDALONE_PLUGIN_PLAN.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/assets/: social-card-generator.html  style.css
src/pytest_autofocus/: plugin.py
tests/: test_plugin.py
