[project]
name = "pytest-autofocus"
version = "0.1.2"
description = "Auto-focus plugin: run only @pytest.mark.focus tests when --auto-focus is set"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matt Florence", email = "matt@mattflo.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/mattflo/pytest-autofocus"
Repository = "https://github.com/mattflo/pytest-autofocus"
Issues = "https://github.com/mattflo/pytest-autofocus/issues"

[project.entry-points.pytest11]
autofocus = "pytest_autofocus.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.1",
    "twine>=6.2.0",
]
